--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -2,6 +2,14 @@
 	font-family: 'Playfair Display', serif;
 }
 
+.modal {
+	display: none;
+}
+
+.modal.is-open {
+	display: block;
+}
+
 #wrapper {
 	padding: 1.2rem 2rem 0rem 2rem;
 }
