--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -108,10 +108,19 @@
 }
 
 .small-text {
-	font-size: 1.5rem;
+	font-size: 1rem;
 	color: #C1C1C1;
 	margin-top: 4rem;
 } 
+
+.github-link {
+	text-decoration: none;
+	color: #595959;
+}
+
+.github-img {
+	width: 20px;
+}
 
 .count {
 	color: #A62628;
